fix z-index for cookie banner

--- a/base/src/scss/common/_com-cookies.scss
+++ b/base/src/scss/common/_com-cookies.scss
@@ -1,5 +1,5 @@
 #gdpr-consent-banner {
-    z-index: 98;
+    z-index: 999999;
     padding: 50px 25px;
     background: #fff;
     position: fixed;
